--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Easy craft development.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "./scripts/prepublish.sh"
+    "start": "./index.js",
+    "prepublishOnly": "./scripts/prepublish.sh"
   },
   "bin": {
     "craftup": "./index.js"
@@ -29,11 +29,14 @@
   },
   "homepage": "https://github.com/tschoffelen/craftup#readme",
   "dependencies": {
+    "@includable/open-browser": "^1.1.0",
+    "axios": "^0.18.0",
     "chalk": "^2.4.2",
     "commander": "^2.19.0",
     "hasbin": "^1.2.3",
     "mkdirp": "^0.5.1",
     "ora": "^3.1.0",
+    "shelljs": "^0.8.3",
     "unzip": "^0.1.11",
     "update-notifier": "^2.5.0",
     "uuid": "^3.3.2"
