--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "shelljs": "^0.8.3",
     "unzip": "^0.1.11",
     "update-notifier": "^2.5.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yaml": "^1.3.2"
   }
 }
