Added POC load and dump commands.

--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "commander": "^2.19.0",
     "hasbin": "^1.2.3",
     "mkdirp": "^0.5.1",
+    "mysql-import": "^1.0.13",
+    "mysqldump": "^2.2.1",
     "ora": "^3.1.0",
     "prompt-confirm": "^2.0.4",
     "shelljs": "^0.8.3",
+    "tcp-port-used": "^1.0.1",
     "unzip": "^0.1.11",
     "update-notifier": "^2.5.0",
     "uuid": "^3.3.2",
