--- a/lib/template/Dockerfile
+++ b/lib/template/Dockerfile
@@ -1,9 +1,6 @@
-FROM craftcms/craft:latest
+FROM craftup/craft:latest
 
 # Copy app resources
 COPY . /app
-
-# Install composer deps
-RUN /bin/run-composer
 
 # Do any other overrides you feel like you need to do
