--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "craftup",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Easy Craft CMS development.",
   "main": "index.js",
   "scripts": {
-    "prepublish": "./scripts/prepublish.sh"
+    "prepublishOnly": "./scripts/prepublish.sh"
   },
   "bin": {
     "craftup": "./index.js"
@@ -30,21 +30,22 @@
   "homepage": "https://github.com/tschoffelen/craftup#readme",
   "dependencies": {
     "@includable/open-browser": "^1.1.0",
-    "axios": "^0.18.0",
-    "chalk": "^2.4.2",
-    "commander": "^2.19.0",
+    "axios": "^0.19.2",
+    "chalk": "^3.0.0",
+    "commander": "^4.1.1",
     "hasbin": "^1.2.3",
-    "log-update": "^3.2.0",
-    "mkdirp": "^0.5.1",
+    "log-update": "^3.4.0",
+    "mkdirp": "^1.0.3",
     "mysql-import": "^1.0.13",
     "mysqldump": "^2.2.1",
-    "ora": "^3.1.0",
+    "open-editor": "^2.0.1",
+    "ora": "^4.0.3",
     "prompt-confirm": "^2.0.4",
     "shelljs": "^0.8.3",
     "tcp-port-used": "^1.0.1",
-    "unzip": "^0.1.11",
-    "update-notifier": "^2.5.0",
-    "uuid": "^3.3.2",
-    "yaml": "^1.3.2"
+    "unzipper": "^0.10.7",
+    "update-notifier": "^4.0.0",
+    "uuid": "^3.4.0",
+    "yaml": "^1.7.2"
   }
 }
