--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Easy Craft CMS development.",
   "main": "index.js",
   "scripts": {
-    "prepublishOnly": "./scripts/prepublish.sh"
+    "prepublishOnly": "./scripts/prepublish.sh",
+    "lint": "prettier --write src/**/*.js"
   },
   "bin": {
     "craftup": "./index.js"
@@ -47,5 +48,18 @@
     "update-notifier": "^4.0.0",
     "uuid": "^3.4.0",
     "yaml": "^1.7.2"
+  },
+  "devDependencies": {
+    "husky": ">=4",
+    "lint-staged": ">=10",
+    "prettier": "^2.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
