--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.19.2",
     "chalk": "^3.0.0",
     "commander": "^4.1.1",
+    "download-file": "^0.1.5",
     "hasbin": "^1.2.3",
     "log-update": "^3.4.0",
     "mkdirp": "^1.0.3",
@@ -46,7 +47,7 @@
     "tcp-port-used": "^1.0.1",
     "unzipper": "^0.10.7",
     "update-notifier": "^4.0.0",
-    "uuid": "^3.4.0",
+    "uuid": "^8.2.0",
     "yaml": "^1.7.2"
   },
   "devDependencies": {
