--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,23 +6,23 @@ on:
       - master
 
 jobs:
-  deploy:
+  push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Build and push 'craftup/craft'
+      - name: "Build and push 'craftup/craft'"
           uses: elgohr/Publish-Docker-Github-Action@master
           with:
             name: craftup/craft
             workdir: lib/docker/craft
             tags: latest
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push 'craftup/mysql-client'
+            username: ${{secrets.DOCKER_USERNAME}}
+            password: ${{secrets.DOCKER_PASSWORD}}
+      - name: "Build and push 'craftup/mysql-client'"
           uses: elgohr/Publish-Docker-Github-Action@master
           with:
             name: craftup/mysql-client
             workdir: lib/docker/mysql-client
             tags: latests
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+            username: ${{secrets.DOCKER_USERNAME}}
+            password: ${{secrets.DOCKER_PASSWORD}}
