Fix NPM workflow.

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -5,8 +5,7 @@ on:
     types: [created]
 
 jobs:
-  publish:
-    needs: build
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
