--- a/lib/template/src/composer.json
+++ b/lib/template/src/composer.json
@@ -3,6 +3,7 @@
     "craftcms/aws-s3": "^1.2",
     "craftcms/cms": "^3.4",
     "craftcms/redactor": "^2.6",
+    "ether/seo": "^3.6",
     "vlucas/phpdotenv": "^4.1"
   },
   "config": {
