--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,24 +5,45 @@ on:
     branches:
       - master
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: includable/craftup-craft
+  MYSQL_NAME: includable/craftup-mysql-client
+
 jobs:
   push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Build and push craftup/craft
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2.1.0
         with:
-          name: craftup/craft
-          workdir: lib/docker/craft
-          tags: latest
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
-      - name: Build and push craftup/mysql-client
-        uses: elgohr/Publish-Docker-Github-Action@master
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4.4.0
         with:
-          name: craftup/mysql-client
-          workdir: lib/docker/mysql-client
-          tags: latests
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
+          images: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            ${{ env.REGISTRY }}/${{ env.MYSQL_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: ./lib/docker/craft
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: ./lib/docker/mysql-client
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.MYSQL_NAME }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
